frameos/src/drivers/waveshare/ePaper/EPD_2in9_V3.h

/*****************************************************************************
* | File      	:   EPD_2in9_V3.h
* | Author      :   Waveshare team
* | Function    :   2.9inch e-paper V3
* | Info        :
*----------------
* |	This version:   V1.2
* | Date        :   2023-12-21
* | Info        :
* -----------------------------------------------------------------------------
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documnetation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to  whom the Software is
# furished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS OR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#
******************************************************************************/
#ifndef __EPD_2IN9_V3_H_
#define __EPD_2IN9_V3_H_

#include "DEV_Config.h"


#define EPD_2IN9_V3_WIDTH       128
#define EPD_2IN9_V3_HEIGHT      296

void EPD_2IN9_V3_Init(void);
void EPD_2IN9_V3_Init_Fast(void);
void EPD_2IN9_V3_Gray4_Init(void);
void EPD_2IN9_V3_Clear(void);
void EPD_2IN9_V3_Display(UBYTE *Image);
void EPD_2IN9_V3_Display_Fast(UBYTE *Image);
void EPD_2IN9_V3_Display_Base(UBYTE *Image);
void EPD_2IN9_V3_4GrayDisplay(UBYTE *Image);
void EPD_2IN9_V3_Display_Partial(const UBYTE *Image, UWORD Xstart, UWORD Ystart, UWORD Xend, UWORD Yend);
void EPD_2IN9_V3_Sleep(void);
#endif